# atlas-clean-code-maerz-2025

./: README.md
LValueUndRValue/: CMakeLists.txt  main.cpp
LamdaDemo/: CMakeLists.txt  main.cpp
NimGameProject/: CMakeLists.txt  main.cpp
NimGameProject/client/: GameClient.h
NimGameProject/game/: AbstractGame.h  Foo.h  Game.h
NimGameProject/game/nimgame/: NimGame.h
NimGameProject/game/nimgame/player/: AbstractNimGamePlayer.h  ComputerPlayer.h  HumanPlayer.h  NimGamePlayer.h  OmaPlayer.h
NimGameProject/game/player/: AbstractPlayer.h  Player.h
NimGameProject/io/: ConsoleWriter.h  Writer.h
ThreadDemo/: CMakeLists.txt  main.cpp
TrailngDemo/: CMakeLists.txt  main.cpp
VectorFillerDemo/: CMakeLists.txt  main.cpp
VectorFillerUebung/: CMakeLists.txt  main.cpp
VectorFillerUebung/atlas/bootstrap/: Bootstrap.h
VectorFillerUebung/atlas/client/: Client.h
VectorFillerUebung/atlas/client/impl/: ClientImpl.h
VectorFillerUebung/atlas/container/: AbstractVectorFactory.h  VectorFactory.h
VectorFillerUebung/atlas/container/impl/builder/: VectorFactoryBuilder.h
VectorFillerUebung/atlas/container/impl/decorator/: VectorFactoryLoggerDecorator.h
VectorFillerUebung/atlas/container/impl/parallel/: VectorFactoryAutoImpl.h
VectorFillerUebung/atlas/generator/: Generator.h
VectorFillerUebung/atlas/time/: Stopwatch.h
interface-segregation-event/src/de/clientside/: Main.java
interface-segregation-gui/src/de/limago/: Fenster.java
